feat/MET-6928 Add support for cors configuration (#23)
MET-6928 Add support for cors configuration